之前部署后样式错乱，修改了一下，看看真的解决了吗

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,19 +35,6 @@
 
 
 /*============================文档底部上、下一页按钮样式============================*/
-[data-theme='dark'] { 
-  .pagination-nav__link:hover {
-    background-color: #1dffc733; /* 黑夜模式下，悬停时背景颜色 */
-    border-color: #2ed3af; /* 黑夜模式下，悬停时边框颜色 */
-  }
-
-  .pagination-nav__link {
-    border-color: #1c5e4f; /* 边框颜色 */
-    border-width: 3px; /* 边框厚度 */    
-  }
-
-}
-
 .pagination-nav__link:hover {
   background-color: #cde4fa94; /* 悬停时背景颜色 */
 }
@@ -56,20 +43,33 @@
   border-width: 3px; /* 边框厚度 */ 
   /* background-color: #e8f1f8; */ /* 修改链接悬停颜色 */ 
 }
+
+
+
+[data-theme='dark'] .pagination-nav__link {
+  border-color: #1c5e4f; /* 边框颜色 */
+  border-width: 3px; /* 边框厚度 */  
+}
+
+[data-theme='dark'] .pagination-nav__link:hover {
+  background-color: #1dffc733; /* 黑夜模式下，悬停时背景颜色 */
+  border-color: #2ed3af; /* 黑夜模式下，悬停时边框颜色 */
+}
 /*====================================================================================*/
 
 
 /*============================修改所有链接 属性=====================================*/
-:link:hover {
+/* :link:hover {
   
-}
+} */
 /*====================================================================================*/
 
 
 /*==========================这里可以修改 顶部导航栏 ====================================*/
-.navbar__link  {
-  /* color: #ff351a; */ /* 修改链接悬停颜色 */
-}
+/*.navbar__link  {
+
+  color: #ff351a; 
+}*//* 修改链接悬停颜色 */
 /*====================================================================================*/
 
 
