--- a/src/css/MyCss.module.css
+++ b/src/css/MyCss.module.css
@@ -18,22 +18,19 @@
     background-color: #5c62d5;
   }
 
-[data-theme="dark"]{
-  .B2{
-    position: relative;        
-  }
-  
-.B2:after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    top: 68%;
-    left: -0.2em;
-    right: -0.2em;
-    bottom: -0.13em;
-    transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
-    background-color: #19a558;
-  }
+[data-theme="dark"] .B2{
+  position: relative;        
+}
+[data-theme="dark"] .B2:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 68%;
+  left: -0.2em;
+  right: -0.2em;
+  bottom: -0.13em;
+  transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
+  background-color: #19a558;
 }
 /* End of code */
 
@@ -58,21 +55,21 @@
   width: 5px;
   background-color: #5c62d5;
 }
-[data-theme="dark"]{
-  .B3{
-    position: relative;        
-  }
-  .B3:before{  
-    content: "";
-    display: block;
-    height: 1.5rem;
-    left: 0;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 5px;
-    background-color: #19a558;
-  }
+
+[data-theme="dark"] .B3 {
+  position: relative;        
+}
+
+[data-theme="dark"] .B3:before{  
+  content: "";
+  display: block;
+  height: 1.5rem;
+  left: 0;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 5px;
+  background-color: #19a558;
 }
 
 .BH3{  
@@ -81,12 +78,10 @@
   color: 'white',
 }
 
-[data-theme="dark"]{
-  .BH3{  
-    background-color:  #19a558;
-    border-radius: 4px;
-    color: 'white',
-  }
+[data-theme="dark"] .BH3 {  
+  background-color:  #19a558;
+  border-radius: 4px;
+  color: 'white',
 }
 
 
@@ -99,10 +94,8 @@
   background-color:  #e6e7f9c9;
   border-radius: 4px;
 }
-[data-theme="dark"]{
-  .W{
-    color: #e6e7f9;
-    background-color:  #19a558;
-    border-radius: 4px;
-  }
+[data-theme="dark"] .W {
+  color: #e6e7f9;
+  background-color:  #19a558;
+  border-radius: 4px;
 }
