--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -77,7 +77,22 @@
 }
 
 
+/*
+用deepseek生成的，给发布时间、字数、阅读时间元数据设置样式
+*/
+.doc-meta {
+  margin-bottom: 20px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+}
 
+.doc-meta span {
+  margin: 5px 0;
+  font-size: 14px;
+  color: #666;
+  padding-right: 10px;
+}
 
 
 
